<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_create_alarm_scheduleAlarmHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/schedule_alarm"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/fragment_create_alarm_timePickerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/fragment_create_alarm_scheduleAlarmHeading">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:text="@string/alarm_time"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TimePicker
                android:id="@+id/fragment_create_alarm_timePicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:timePickerMode="spinner" />
        </LinearLayout>

        <EditText
            android:id="@+id/fragment_create_alarm_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alarm_title"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/fragment_create_alarm_timePickerLayout" />

        <CheckBox
            android:id="@+id/fragment_create_alarm_recurring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/recurring_alarm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_create_alarm_title" />

        <LinearLayout
            android:id="@+id/fragment_create_alarm_recurring_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/fragment_create_alarm_recurring">

            <CheckBox
                android:id="@+id/fragment_create_alarm_checkMon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon" />

            <CheckBox
                android:id="@+id/fragment_create_alarm_checkTue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tue" />

            <CheckBox
                android:id="@+id/fragment_create_alarm_checkWed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wed" />

            <CheckBox
                android:id="@+id/fragment_create_alarm_checkThu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thu" />

            <CheckBox
                android:id="@+id/fragment_create_alarm_checkFri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fri" />

            <CheckBox
                android:id="@+id/fragment_create_alarm_checkSat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sat" />

            <CheckBox
                android:id="@+id/fragment_create_alarm_checkSun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun" />

        </LinearLayout>

        <Button
            android:id="@+id/fragment_create_alarm_scheduleAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/schedule_alarm"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="133dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>